--- a/style.css
+++ b/style.css
@@ -63,6 +63,13 @@ body {
     font-weight: 700;
 }
 
+#changingName {
+    display: inline-block;
+    transition: opacity 0.7s ease-in-out;
+    opacity: 0;
+    color: aqua;
+}
+
 .home-content h2 {
     font-size: 36px;
     font-weight: 700;
@@ -92,7 +99,7 @@ body {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 150px;
+    width: 160px;
     height: 100%;
     background: aqua;
     border: 2px solid aqua;
