--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 /* Body */
 body {
     font-family: 'Poppins', sans-serif;
-    background: #081b29;
+    background: #001F3F;
     color: #ededed;
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
@@ -67,7 +67,7 @@ body {
 }
 
 .navbar a:hover {
-    color: aqua;
+    color: #4682B4;
 }
 
 /* Toggle button for mobile navbar */
@@ -110,6 +110,9 @@ body {
     display: flex;
     align-items: center;
     padding: 0 10%;
+    background: url('/Images/NavyBackgroundProfileSide.png') no-repeat;
+    background-size: cover;
+    background-position: center;
 }
 
 .home-content {
@@ -125,7 +128,7 @@ body {
     display: inline-block;
     transition: opacity 0.7s ease-in-out;
     opacity: 0;
-    color: aqua;
+    color: #007FFF;
 }
 
 .home-content h2 {
@@ -137,7 +140,7 @@ body {
 .home-content h3 {
     font-size: 32px;
     font-weight: 700;
-    color: aqua;
+    color: #007FFF;
 }
 
 .home-content p {
@@ -159,8 +162,8 @@ body {
     align-items: center;
     width: 160px;
     height: 100%;
-    background: aqua;
-    border: 2px solid aqua;
+    background: #007FFF;
+    border: 2px solid #007FFF;
     border-radius: 8px;
     font-size: 19px;
     color: #081b29;
@@ -173,12 +176,12 @@ body {
 }
 
 .btn-box a:hover {
-    color: aqua;
+    color: #007FFF;
 }
 
 .btn-box a:nth-child(2) {
     background: transparent;
-    color: aqua;
+    color: #007FFF;
 }
 
 .btn-box a:nth-child(2):hover {
@@ -186,7 +189,7 @@ body {
 }
 
 .btn-box a:nth-child(2)::before {
-    background: aqua;
+    background: #007FFF;
 }
 
 .btn-box a::before {
@@ -196,7 +199,7 @@ body {
     left: 0;
     width: 0;
     height: 100%;
-    background: #081b29;
+    background: #333333;
     z-index: -1;
     transition: .4s;
 }
@@ -221,10 +224,10 @@ body {
     width: 40px;
     height: 40px;
     background: transparent;
-    border: 2px solid aqua;
+    border: 2px solid #007FFF;
     border-radius: 50%;
     font-size: 20px;
-    color: aqua;
+    color: #007FFF;
     text-decoration: none;
     z-index: 1;
     overflow: hidden;
@@ -242,7 +245,7 @@ body {
     left: 0;
     width: 0;
     height: 100%;
-    background: aqua;
+    background: #007FFF;
     z-index: -1;
     transition: .5s;
 }
