--- a/style.css
+++ b/style.css
@@ -2,6 +2,36 @@
 
 /* Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');
+
+
+/* Define colors */
+:root {
+    --background-color: #001F3F;
+    --text-color: #ededed;
+    --accent-color: #007FFF;
+    --hover-color: #4682B4;
+    --contact-btn-bg: #007FFF;
+    --contact-btn-border: #007FFF;
+    --contact-btn-hover-bg: transparent;
+    --contact-btn-hover-text: #007FFF;
+    --home-sci-border: #007FFF;
+    --home-sci-bg-hover: #007FFF;
+    --home-sci-text-hover: #081b29;
+    --swiper-bg: #000;
+    --swiper-text-color: #fff;
+    --clr-neon: #14f7ff;
+    --clr-bg: #001414;
+    --font-size: 3rem;
+}
+
+*, 
+*::after,
+*::before {
+  box-sizing: border-box;
+}
+
 
 /* Reset */
 * {
@@ -16,9 +46,9 @@ html, body {
 }
 
 body {
-    font-family: 'Poppins', sans-serif;
-    background: #001F3F;
-    color: #ededed;
+    font-family: 'Noto Serif', sans-serif;
+    background: var(--background-color);
+    color: var(--text-color);
     overflow-x: hidden; /* Prevent horizontal scrolling */
 }
 
@@ -37,8 +67,8 @@ body {
 }
 
 .logo {
-    font-size: 25px;
-    color: #ededed;
+    font-size: 35px;
+    color: var(--text-color);
     text-decoration: none;
     font-weight: 600;
 }
@@ -63,7 +93,7 @@ body {
 
 .navbar a {
     font-size: 24px;
-    color: #ededed;
+    color: var(--text-color);
     text-decoration: none;
     font-weight: 500;
     margin: 20px 0;
@@ -71,7 +101,7 @@ body {
 }
 
 .navbar a:hover {
-    color: #4682B4;
+    color: var(--hover-color);
 }
 
 /* Toggle button for mobile navbar */
@@ -83,29 +113,9 @@ body {
     font-size: 24px;
     background: none;
     border: none;
-    color: #ededed;
+    color: var(--text-color);
     cursor: pointer;
     z-index: 101; /* Ensure the toggle button is above other elements */
-}
-
-/* Adjust spacing for navbar links on larger screens */
-@media (min-width: 769px) {
-    .navbar {
-        display: flex;
-        position: static;
-        background-color: transparent;
-        flex-direction: row;
-        justify-content: flex-end;
-        height: auto;
-    }
-
-    .navbar-toggle {
-        display: none; /* Hide toggle button on larger screens */
-    }
-
-    .navbar a {
-        margin: 0 15px; /* Add spacing between the navbar items */
-    }
 }
 
 /* Home Section */
@@ -129,14 +139,14 @@ body {
 }
 
 .home-content h1 span {
-    margin-top: 10px;;
+    margin-top: 3px;
 }
 
 #changingName {
     display: inline-block;
     transition: opacity 0.7s ease-in-out;
     opacity: 0;
-    color: #007FFF;
+    color: var(--accent-color);
 }
 
 .home-content h2 {
@@ -146,81 +156,22 @@ body {
 }
 
 .home-content h3 {
+    margin: 20px 0 30px;
     font-size: 32px;
     font-weight: 700;
-    color: #007FFF;
+    color: var(--accent-color);
 }
 
 .home-content p {
     font-size: 16px;
-    margin: 40px 0 60px;
-}
-
-.btn-box {
-    display: flex;
-    justify-content: space-between;
-    width: 345px;
-    height: 50px;
-}
-
-.btn-box a {
-    position: relative;
-    display: inline-flex;
-    justify-content: center;
-    align-items: center;
-    width: 160px;
-    height: 100%;
-    background: #007FFF;
-    border: 2px solid #007FFF;
-    border-radius: 8px;
-    font-size: 19px;
-    color: #081b29;
-    text-decoration: none;
-    font-weight: 600;
-    letter-spacing: 1px;
-    z-index: 1;
-    overflow: hidden;
-    transition: .4s;
-}
-
-.btn-box a:hover {
-    color: #007FFF;
-}
-
-.btn-box a:nth-child(2) {
-    background: transparent;
-    color: #007FFF;
-}
-
-.btn-box a:nth-child(2):hover {
-    color: #081b29;
-}
-
-.btn-box a:nth-child(2)::before {
-    background: #007FFF;
-}
-
-.btn-box a::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 0;
-    height: 100%;
-    background: #333333;
-    z-index: -1;
-    transition: .4s;
-}
-
-.btn-box a:hover::before {
-    width: 100%;
+    margin: 20px 0 60px;
 }
 
 .home-sci {
     position: absolute;
     bottom: 20px; 
     left: 10%;
-    width: 170px;
+    width: 210px;
     display: flex;
     justify-content: space-evenly;
 }
@@ -230,21 +181,25 @@ body {
     display: inline-flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
+    width: 60%;
     height: 40px;
     background: transparent;
-    border: 2px solid #007FFF;
+    border: 2px solid var(--home-sci-border);
     border-radius: 50%;
     font-size: 20px;
-    color: #007FFF;
+    color: var(--home-sci-border);
     text-decoration: none;
     z-index: 1;
     overflow: hidden;
     transition: .5s;
 }
 
+.home-sci a:not(:last-child) {
+    margin-right: 15px;
+}
+
 .home-sci a:hover {
-    color: #081b29;
+    color: var(--home-sci-text-hover);
 }
 
 .home-sci a::before {
@@ -254,7 +209,7 @@ body {
     left: 0;
     width: 0;
     height: 100%;
-    background: #007FFF;
+    background: var(--home-sci-bg-hover);
     z-index: -1;
     transition: .5s;
 }
@@ -270,8 +225,8 @@ body {
     align-items: center;
     justify-content: center;
     padding: 0 10%;
-    background: #001F3F;
-    color: #ededed;
+    background: var(--background-color);
+    color: var(--text-color);
 }
 
 .about-content {
@@ -303,11 +258,11 @@ body {
     justify-content: center;
     align-items: center;
     padding: 10px 20px;
-    background: #007FFF;
-    border: 2px solid #007FFF;
+    background: var(--contact-btn-bg);
+    border: 2px solid var(--contact-btn-border);
     border-radius: 8px;
     font-size: 19px;
-    color: #081b29;
+    color: var(--home-sci-text-hover);
     text-decoration: none;
     font-weight: 600;
     letter-spacing: 1px;
@@ -315,8 +270,8 @@ body {
 }
 
 .btn-contact a:hover {
-    background: transparent;
-    color: #007FFF;
+    background: var(--contact-btn-hover-bg);
+    color: var(--contact-btn-hover-text);
 }
 
 /* Media Queries */
@@ -349,17 +304,6 @@ body {
     }
 }
 
-/* Fade-in effect */
-.fade-in {
-    opacity: 0;
-    transition: opacity 1s ease-in-out;
-}
-
-.fade-in.visible {
-    opacity: 1;
-}
-
-
 /* Add Swiper styles */
 .mySwiper {
     position: relative;
@@ -372,12 +316,12 @@ body {
 .swiper {
     width: 100%;
     height: 100%;
-    background: #000;
+    background: var(--swiper-bg);
 }
 
 .swiper-slide {
     font-size: 20px; /* Increase text size */
-    color: #fff;
+    color: var(--swiper-text-color);
     box-sizing: border-box;
     padding: 40px 60px;
 }
@@ -426,3 +370,134 @@ body {
         padding: 20px 30px;
     }
 }
+
+.btn-box {
+    display: flex;
+    flex-direction: column; /* Stack buttons vertically on small screens */
+    align-items: center;
+    gap: 2px; /* Space between buttons */
+    margin-top: 10px; /* Adjust as needed */
+}
+
+.btn-box a {
+    display: inline-block;
+    padding: 10px 30px;
+    background-color: #333;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    text-align: center;
+    transition: transform 1s ease, background-color 1s ease; /* Ensure easing effect */
+}
+
+.btn-box a:hover {
+    background-color: #555;
+    transform: translateY(-5px); /* Add lift effect on hover */
+}
+
+@media (min-width: 769px) {
+    .btn-box {
+        flex-direction: row; /* Display buttons in a row on larger screens */
+        gap: 55px; /* Increase space between buttons */
+        margin-top: 0; /* Reset top margin */
+    }
+}
+
+
+.btn-box.visible {
+    opacity: 1;
+    pointer-events: auto; /* Enable interaction */
+}
+
+
+.hidden {
+    opacity: 0;
+    transition: opacity 0.8s ease;
+    pointer-events: none; /* Prevent interaction while hidden */
+}
+
+.visible {
+    opacity: 1;
+    pointer-events: auto; /* Enable interaction */
+}
+
+/* Fade-in effect */
+.fade-in {
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+}
+
+.fade-in.visible {
+    opacity: 1;
+}
+
+.neon {
+    font-size: 1.5em; /* Further increase font size */
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    border: var(--accent-color) 0.125em solid;
+    padding: 0.75em 1.5em; /* Increase padding */
+    border-radius: 0.5em; /* Keep border-radius for better appearance */
+    text-shadow: 
+      0 0 0.2em #FFF7,
+      0 0 0.3em var(--accent-color);
+    box-shadow: 
+      inset 0 0 0.5em var(--accent-color),
+      0 0 0.5em var(--accent-color);
+}
+
+.neon::before {
+    content: "";
+    position: absolute;
+    top: 140%;
+    left: 15%;
+    width: 60%;
+    height: 80%;
+    background: var(--accent-color);
+    transform: 
+      perspective(0.2em)
+      rotateX(10deg) 
+      scale(1.3, 0.40);
+    filter: blur(0.5em);
+    opacity: 0.4;
+    pointer-events: none;
+    transition: opacity 100ms linear;
+}
+
+.neon::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: var(--accent-color);
+    box-shadow: 0 0 2em var(--accent-color);
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 100ms linear;
+}
+
+.neon::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: var(--clr-neon);
+    box-shadow: 0 0 2em var(--clr-neon);
+    z-index: -1;
+    opacity: 0;
+    transition: opacity 100ms linear;
+  }
+
+.neon:hover, .neon:focus {
+    color: white;
+}
+
+.neon:hover::before {
+    opacity: 0.8;
+}
+
