[Background] Updated background link

--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ body {
     align-items: center;
     justify-content: space-between;
     padding: 0 10%;
-    background: url('/Images/NavyBackgroundProfileSide.png') no-repeat center center;
+    background: url('https://i.postimg.cc/9Fw7xcZg/Navy-Background-Profile-Side.png') no-repeat center center;
     background-size: cover;
 }
 
